Fix mobile viewport jump

--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,10 @@ body {
 
 canvas {
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0;
+  width: 100vw;
+  height: 100dvh;
+  display: block;
   outline: none;
 }
 
